gitops/platform-apps/openwebui/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openwebui
  namespace: openwebui
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`openwebui.__ZONE_NAME__`)
      services:
        - kind: Service
          name: openwebui
          port: 80
  tls: {}
